--- a/_layouts/pages.html
+++ b/_layouts/pages.html
@@ -4,6 +4,8 @@ categories: [menu]
 ---
 
 {% include header.html %}
-<div>
+<main>
+<section class='content'>
 {{ content }}
-</div>
+</section>
+</main>
