--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/main.css" type="text/css">
   </head>
   <body>
         {{ content }}
-        {{ page }}
   </body>
 
 </html>
